fix initial project

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
     init:
       continue-on-error: true
   datasource:
-    url: jdbc:postgresql://localhost:5432/soat
+    url: jdbc:postgresql://localhost:5433/soat
     driverClassName: org.postgresql.Driver
     username: postgres
     password: postgres
@@ -22,7 +22,7 @@ spring:
   metrics:
     export:
       prometheus:
-        enabled: true  # Habilita a exportação de métricas para Prometheus
+        enabled: true  # Habilita a exportaï¿½ï¿½o de mï¿½tricas para Prometheus
 
     actuator:
       endpoints:
@@ -31,19 +31,19 @@ spring:
             include: '*'  # Exponha todos os endpoints, incluindo /actuator/prometheus
       endpoint:
         prometheus:
-          enabled: true  # Certifica-se de que o endpoint /actuator/prometheus está habilitado
+          enabled: true  # Certifica-se de que o endpoint /actuator/prometheus estï¿½ habilitado
       metrics:
         enable:
-          all: true  # Habilita todas as métricas
+          all: true  # Habilita todas as mï¿½tricas
 management:
   server:
-    port: 8081  # Porta do Actuator, se for diferente da porta principal da aplicação
+    port: 8081  # Porta do Actuator, se for diferente da porta principal da aplicaï¿½ï¿½o
   endpoints:
     web:
       exposure:
         include:
-          - prometheus  # Inclui o endpoint Prometheus na exposição
-          - health  # Inclui o endpoint de saúde
+          - prometheus  # Inclui o endpoint Prometheus na exposiï¿½ï¿½o
+          - health  # Inclui o endpoint de saï¿½de
           - info
 
 sonar:
