--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
             <artifactId>postgresql</artifactId>
             <version>42.3.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>1.5.5.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
