--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
             <artifactId>gson</artifactId>
             <version>2.13.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.5.3</version>
+        </dependency>
     </dependencies>
 
     <build>
