--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,7 +12,7 @@ spring:
     hikari:
       connection-timeout: 200000
   jpa:
-    show-sql: true
+    show-sql: false
     hibernate:
       ddl-auto: none
     properties:
@@ -26,10 +26,10 @@ spring:
     callback-url: ${MERCADO_PAGO_CALLBACK_URL}
     webhook-token: ${MERCADO_PAGO_WEBHOOK_TOKEN}
 
-  metrics:
-    export:
-      prometheus:
-        enabled: true
+#  metrics:
+#    export:
+#      prometheus:
+#        enabled: true
 
     actuator:
       endpoints:
@@ -58,3 +58,11 @@ management:
         include:
           - health
           - info
+
+logging:
+  level:
+    root: WARN
+    org.springframework: WARN
+    org.hibernate: WARN
+    com.zaxxer.hikari: INFO
+    com.store.soattechchallenge: INFO
