Atualiza pom.xml, properties, remove compose.yaml e adiciona docker-compose.yaml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=soat-techchallenge
+
+spring.datasource.url=jdbc:postgresql://postgres-db:5432/soat
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
