--- a/soat.env
+++ b/soat.env
@@ -1,15 +1,15 @@
-POSTGRES_DB: soat
-POSTGRES_USER: postgres
-POSTGRES_PASSWORD: postgres
+POSTGRES_DB=soat
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 
-SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/soat
-SPRING_DATASOURCE_USERNAME: postgres
-SPRING_DATASOURCE_PASSWORD: postgres
+SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/soat
+SPRING_DATASOURCE_USERNAME=postgres
+SPRING_DATASOURCE_PASSWORD=postgres
 
-MERCADO_PAGO_ACCESS_TOKEN=APP_USR-8105646837628424-042714-027bf76c0cfe577ad6b987b901904564-2404621079;
-MERCADO_PAGO_CALLBACK_URL=https://02ccd79acb1838.lhr.life/soat-fast-food/payment/notifications/mercado-pago;
-MERCADO_PAGO_POS=LOJA01TSTPOS01;
-MERCADO_PAGO_USER_ID=2404621079;
+MERCADO_PAGO_ACCESS_TOKEN=APP_USR-8105646837628424-042714-027bf76c0cfe577ad6b987b901904564-2404621079
+MERCADO_PAGO_CALLBACK_URL=https://02ccd79acb1838.lhr.life/soat-fast-food/payment/notifications/mercado-pago
+MERCADO_PAGO_POS=LOJA01TSTPOS01
+MERCADO_PAGO_USER_ID=2404621079
 MERCADO_PAGO_WEBHOOK_TOKEN=TlvhF4KCGyNp9BQ2dwv3wbOYV
 
 JWT_SECRET_KEY=secretJwtGenerationSoatTechChallenge
