--- a/compose.yaml
+++ b/compose.yaml
@@ -1,1 +1,32 @@
 services:
+  db:
+    build:
+      context: .
+      dockerfile: Dockerfile-db
+    env_file:
+      - soat.env
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./script.sql:/docker-entrypoint-initdb.d/script.sql
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    env_file:
+      - soat.env
+    ports:
+      - "8080:8080"
+    depends_on:
+      db:
+        condition: service_healthy
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8081/soat-fast-food/actuator/health" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
