--- a/compose.yaml
+++ b/compose.yaml
@@ -17,7 +17,7 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile-app
     env_file:
       - soat.env
     ports:
