--- a/k8s/app/service.yaml
+++ b/k8s/app/service.yaml
@@ -4,10 +4,9 @@ metadata:
   name: app-service
   namespace: tech-challenge
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: tech-challenge-app
   ports:
     - port: 80
       targetPort: 8080
-      nodePort: 30080
