--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -31,23 +31,38 @@ spring:
     password: guest
 
   cloud:
+    function:
+      definition: consumeOrderCreatedEvent;consumePaymentClosedEvent
+
     stream:
       defaultBinder: rabbit
 
       bindings:
         paymentProducer-out-0:
-          destination: payment-destination
+          destination: payment
+
+        orderProducer-out-0:
+          destination: order
 
         consumePaymentClosedEvent-in-0:
-          destination: payment-destination
-          group: payment-destination-group
+          destination: payment
+          group: payment-group
 
-    rabbit:
-      bindings:
-        consumePaymentClosedEvent-in-0:
-          consumer:
-            autoBindDlq: true
-            republishToDlq: true
+        consumeOrderCreatedEvent-in-0:
+          destination: order
+          group: order-group
+
+      rabbit:
+        bindings:
+          consumePaymentClosedEvent-in-0:
+            consumer:
+              autoBindDlq: true
+              republishToDlq: true
+
+          consumeOrderCreatedEvent-in-0:
+            consumer:
+              autoBindDlq: true
+              republishToDlq: true
 
 #  metrics:
 #    export:
