--- a/k8s/app/secret.yaml
+++ b/k8s/app/secret.yaml
@@ -13,3 +13,6 @@ data:
   MERCADO_PAGO_USER_ID: MjQwNDYyMTA3OQ==
   MERCADO_PAGO_WEBHOOK_TOKEN: VGx2aEY0S0NHeU5wOUJRMmR3djN3Yk9ZVg==
   JWT_SECRET_KEY: c2VjcmV0Snd0R2VuZXJhdGlvblNvYXRUZWNoQ2hhbGxlbmdl
+  BROKER_HOST: YnJva2VyLXNlcnZpY2UudGVjaC1jaGFsbGVuZ2U=
+  BROKER_USERNAME: Z3Vlc3Q=
+  BROKER_PASSWORD: Z3Vlc3Q=
