--- a/soat.env
+++ b/soat.env
@@ -14,3 +14,8 @@ MERCADO_PAGO_WEBHOOK_TOKEN=TlvhF4KCGyNp9BQ2dwv3wbOYV
 
 JWT_SECRET_KEY=secretJwtGenerationSoatTechChallenge
 JWT_EXPIRATION_TIME=3600
+
+BROKER_HOST=broker
+BROKER_PORT=5672
+BROKER_USERNAME=guest
+BROKER_PASSWORD=guest
