--- a/k8s/app/configmap.yaml
+++ b/k8s/app/configmap.yaml
@@ -6,3 +6,4 @@ metadata:
 data:
   MERCADO_PAGO_CALLBACK_URL: http://XXX.us-east-1.elb.amazonaws.com/soat-fast-food/payment/notifications/mercado-pago
   JWT_EXPIRATION_TIME: "3600"
+  BROKER_PORT: "5672"
