feat(k8s): move service behind ingress and update env vars

--- a/k8s/app/secret.yaml
+++ b/k8s/app/secret.yaml
@@ -5,9 +5,9 @@ metadata:
   namespace: tech-challenge
 type: Opaque
 data:
-  SPRING_DATASOURCE_URL: amRiYzpwb3N0Z3Jlc3FsOi8vZGItc2VydmljZS50ZWNoLWNoYWxsZW5nZTo1NDMyL3NvYXQ=
-  SPRING_DATASOURCE_USERNAME: cG9zdGdyZXM=
-  SPRING_DATASOURCE_PASSWORD: cG9zdGdyZXM=
+  SPRING_DATASOURCE_URL: amRiYzpwb3N0Z3Jlc3FsOi8vdGMtcHNxbC1kYi5jMGd6Nm9nNXBheXgudXMtZWFzdC0xLnJkcy5hbWF6b25hd3MuY29tOjU0MzIvc29hdA==
+  SPRING_DATASOURCE_USERNAME: dGNhZG1pbg==
+  SPRING_DATASOURCE_PASSWORD: VGNUZWNoMjAyNQ==
   MERCADO_PAGO_ACCESS_TOKEN: QVBQX1VTUi04MTA1NjQ2ODM3NjI4NDI0LTA0MjcxNC0wMjdiZjc2YzBjZmU1NzdhZDZiOTg3YjkwMTkwNDU2NC0yNDA0NjIxMDc5
   MERCADO_PAGO_POS: TE9KQTAxVFNUUE9TMDE=
   MERCADO_PAGO_USER_ID: MjQwNDYyMTA3OQ==
